--- a/페이지 컨트롤/페이지 컨트롤.md
+++ b/페이지 컨트롤/페이지 컨트롤.md
@@ -1,1 +1,79 @@
+# [1] 이미지 추가하기
 
+---
+
+# [2] 이미지 뷰와 페이지 컨트롤 추가하기
+
+라이브러리에 Page Control 검색 및 스토리보드로 드래그 앤 드롭하면 끝.
+
+---
+
+# [3] 아울렛 변수와 액션 함수, 변수 추가하기
+
+```swift
+import UIKit
+
+class ViewController: UIViewController {
+    @IBOutlet var imgView: UIImageView!
+    
+    @IBOutlet var pageControl: UIPageControl!
+    
+    var images = ["emoji1.png", "emoji2.png", "emoji3.png"]
+    
+    override func viewDidLoad() {
+        super.viewDidLoad()
+        
+    }
+
+    @IBAction func pageChange(_ sender: UIPageControl) {
+        
+        imgView.image = UIImage(named: images[pageControl.currentPage])
+    }
+    
+}
+```
+- 페이지 컨트롤의 현재 페이지 가져오기 > `images[pageControl.currentPage]`
+- 현재 페이지에 해당하는 이미지 파일의 이름을 images 배열에서 가지고 오기 > `named:`
+- UIImage 타입의 이미지 만들기 > `UIImage()`
+- 만든 이미지를 이미지 뷰에 할당하기 > `imgView.image`
+
+---
+
+# [4] 앱 실행 시 보이는 내용 코딩하기
+
+```swift
+import UIKit
+
+class ViewController: UIViewController {
+    @IBOutlet var imgView: UIImageView!
+    
+    @IBOutlet var pageControl: UIPageControl!
+    
+    var images = ["emoji1.png", "emoji2.png", "emoji3.png"]
+    
+    override func viewDidLoad() {
+        super.viewDidLoad()
+        // 페이지 컨트롤 수 -> 이미지 배열 크기로 설정
+        pageControl.numberOfPages = images.count
+        pageControl.currentPage = 0
+
+        // 앱 실행 시 첫 이미지는 배열에서 0번째 이미지로 설정
+        imgView.image = UIImage(named: images[0])
+    }
+
+    @IBAction func pageChange(_ sender: UIPageControl) {
+        
+        imgView.image = UIImage(named: images[pageControl.currentPage])
+    }
+    
+}
+```
+
+---
+
+# [5] 페이지 컨트롤 꾸미기
+
+- Tint Color : 페이지 컨트롤의 페이지를 표시하는 부분의 색상
+- Current Page : 현재 페이지 색상
+
+---
