--- a/페이지 컨트롤/페이지 컨트롤.md
+++ b/페이지 컨트롤/페이지 컨트롤.md
@@ -71,9 +71,14 @@ class ViewController: UIViewController {
 
 ---
 
+
 # [5] 페이지 컨트롤 꾸미기
 
 - Tint Color : 페이지 컨트롤의 페이지를 표시하는 부분의 색상
 - Current Page : 현재 페이지 색상
 
 ---
+
+# [+] 결과화면
+
+<img width="519" alt="스크린샷 2023-08-16 오전 10 28 12" src="https://github.com/leeyebeen-dev/Swift-Study/assets/84004751/825f567c-9fce-4072-b5d1-510791bfe31f">
